Adding personal images

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </noscript>
 
     <!-- Page Title -->
-    <title>Bootstrap 5 HTML Template</title>
+    <title>My New Portofolio</title>
 
 </head>
 
@@ -370,7 +370,7 @@
                         <img class="img-fluid" src="./Assets/img/portfolio-6.jpg" alt="">
                     </picture>
                 </div>
-                <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
+                <!-- <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
                     data-portfolio-img="./Assets/img/portfolio-7.jpg" data-portfolio-title="Inca Skull"
                     data-portfolio-description="Poster illustration created for a club&#x27;s annual summer party. Also created stickers, logos and various website elements."
                     data-portfolio-client="VonHaus Designs" data-portfolio-date=""
@@ -396,7 +396,7 @@
                     <picture class="d-block" data-aos="reveal-left">
                         <img class="img-fluid" src="./Assets/img/portfolio-9.jpg" alt="">
                     </picture>
-                </div>
+                </div> -->
             </div>
         </div> <!-- / My Portfolio-->
 
