Adding website snippets and myskills logos

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             </div>
             <div class="portfolio-listing">
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-1.jpg" data-portfolio-title="Night Party"
+                    data-portfolio-img="./Assets/img/portfolio1.1.png" data-portfolio-title="Night Party"
                     data-portfolio-description="Poster illustration created for a club&#x27;s annual summer party. Also created stickers, logos and various website elements."
                     data-portfolio-client="ACME Design Limited" data-portfolio-date=""
                     data-portfolio-category="Illustration">
@@ -327,7 +327,7 @@
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-2.jpg" data-portfolio-title="Skull &amp; Cat"
+                    data-portfolio-img="./Assets/img/portfolio-2.1.png" data-portfolio-title="Skull &amp; Cat"
                     data-portfolio-description="Custom logo created for a local tatoo artist. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur magna nunc, ut egestas sem egestas non."
                     data-portfolio-client="Super 8 Design" data-portfolio-date=""
                     data-portfolio-category="Logo &amp; Branding">
@@ -336,7 +336,7 @@
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-3.jpg" data-portfolio-title="Warrior Skull"
+                    data-portfolio-img="./Assets/img/portfolio-3.1.png" data-portfolio-title="Warrior Skull"
                     data-portfolio-description="Nulla nec elit eu neque faucibus molestie sed et nulla. Aliquam placerat felis ipsum, non pellentesque tortor ultrices eget. Suspendisse ornare bibendum orci, sit amet aliquet erat faucibus et."
                     data-portfolio-client="Waterfall Theatre" data-portfolio-date=""
                     data-portfolio-category="Poster Design">
@@ -345,7 +345,7 @@
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-4.jpg" data-portfolio-title="Halloween"
+                    data-portfolio-img="./Assets/img/portfolio-4.1.png" data-portfolio-title="Halloween"
                     data-portfolio-description="Donec congue rutrum felis quis vestibulum. Vestibulum dictum libero eu sapien porttitor ultricies. Proin non dolor et nulla blandit vestibulum sed ut purus."
                     data-portfolio-client="Tesco" data-portfolio-date="" data-portfolio-category="Advert Design">
                     <picture class="d-block" data-aos="reveal-left">
@@ -353,7 +353,7 @@
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-5.jpg" data-portfolio-title="Inca Skull"
+                    data-portfolio-img="./Assets/img/portfolio-5.1.png" data-portfolio-title="Inca Skull"
                     data-portfolio-description="Phasellus consectetur orci ut ante gravida tempor. Praesent volutpat tincidunt enim sed dictum. Curabitur neque urna, rhoncus id neque luctus, finibus ornare libero."
                     data-portfolio-client="Super 8 Design" data-portfolio-date=""
                     data-portfolio-category="Illustration">
@@ -362,7 +362,7 @@
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-6.jpg" data-portfolio-title="Snake Head"
+                    data-portfolio-img="./Assets/img/portfolio-6.1.png" data-portfolio-title="Snake Head"
                     data-portfolio-description="Vestibulum eget lectus odio. Curabitur semper, nisi nec gravida pellentesque, justo risus ultricies leo, sed semper eros nisi ut nisl. Ut nec mattis arcu. Donec eu lobortis leo."
                     data-portfolio-client="Petrolhead Designs" data-portfolio-date=""
                     data-portfolio-category="Illustration">
@@ -370,33 +370,6 @@
                         <img class="img-fluid" src="./Assets/img/portfolio-6.jpg" alt="">
                     </picture>
                 </div>
-                <!-- <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-7.jpg" data-portfolio-title="Inca Skull"
-                    data-portfolio-description="Poster illustration created for a club&#x27;s annual summer party. Also created stickers, logos and various website elements."
-                    data-portfolio-client="VonHaus Designs" data-portfolio-date=""
-                    data-portfolio-category="Illustration">
-                    <picture class="d-block" data-aos="reveal-left">
-                        <img class="img-fluid" src="./Assets/img/portfolio-7.jpg" alt="">
-                    </picture>
-                </div>
-                <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-8.jpg" data-portfolio-title="Happy Cactus"
-                    data-portfolio-description="Sed quis mauris id quam rutrum ullamcorper. Donec faucibus eget elit nec iaculis. Vivamus laoreet consectetur felis at consequat. Sed finibus turpis in nisl molestie, eu dignissim nulla pharetra."
-                    data-portfolio-client="JD Limited" data-portfolio-date=""
-                    data-portfolio-category="Logo &amp; Branding">
-                    <picture class="d-block" data-aos="reveal-left">
-                        <img class="img-fluid" src="./Assets/img/portfolio-8.jpg" alt="">
-                    </picture>
-                </div>
-                <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-9.jpg" data-portfolio-title="Octopus Coffee"
-                    data-portfolio-description="Proin in sem vitae ante efficitur tempor. Nam pellentesque, risus quis pulvinar eleifend, magna massa porttitor dui, mattis vehicula eros erat eu quam. Vivamus vel leo odio."
-                    data-portfolio-client="Sentry Limited" data-portfolio-date=""
-                    data-portfolio-category="Logo &amp; Branding">
-                    <picture class="d-block" data-aos="reveal-left">
-                        <img class="img-fluid" src="./Assets/img/portfolio-9.jpg" alt="">
-                    </picture>
-                </div> -->
             </div>
         </div> <!-- / My Portfolio-->
 
@@ -417,7 +390,7 @@
                 <div class="col-12 col-md-6" data-aos="reveal-right">
                     <div class="d-flex align-items-center">
                         <picture>
-                            <img class="f-h-8" src="./assets/images/figma.svg" alt="">
+                            <img class="f-h-8" src="./Assets/img/javascript.png" alt="">
                         </picture>
                         <p class="fw-medium ms-3 mb-0">Javascript</p>
                     </div>
@@ -431,7 +404,7 @@
                 <div class="col-12 col-md-6" data-aos="reveal-right">
                     <div class="d-flex align-items-center">
                         <picture>
-                            <img class="f-h-8" src="./assets/images/sketch.svg" alt="">
+                            <img class="f-h-8" src="./Assets/img/html.png" alt="">
                         </picture>
                         <p class="fw-medium ms-3 mb-0">HTML</p>
                     </div>
@@ -445,7 +418,7 @@
                 <div class="col-12 col-md-6" data-aos="reveal-right">
                     <div class="d-flex align-items-center">
                         <picture>
-                            <img class="f-h-8" src="./assets/images/photoshop.svg" alt="">
+                            <img class="f-h-8" src="./Assets/img/node.png" alt="">
                         </picture>
                         <p class="fw-medium ms-3 mb-0">Node.js</p>
                     </div>
@@ -459,7 +432,7 @@
                 <div class="col-12 col-md-6" data-aos="reveal-right">
                     <div class="d-flex align-items-center">
                         <picture>
-                            <img class="f-h-8" src="./assets/images/xd.svg" alt="">
+                            <img class="f-h-8" src="./Assets/img/jquery1.png" alt="">
                         </picture>
                         <p class="fw-medium ms-3 mb-0">JQuery</p>
                     </div>
@@ -473,7 +446,7 @@
                 <div class="col-12 col-md-6" data-aos="reveal-right">
                     <div class="d-flex align-items-center">
                         <picture>
-                            <img class="f-h-8" src="./assets/images/illustrator.svg" alt="">
+                            <img class="f-h-8" src="./Assets/img/css.png" alt="">
                         </picture>
                         <p class="fw-medium ms-3 mb-0">CSS</p>
                     </div>
@@ -487,7 +460,7 @@
                 <div class="col-12 col-md-6" data-aos="reveal-right">
                     <div class="d-flex align-items-center">
                         <picture>
-                            <img class="f-h-8" src="./assets/images/photoshop.svg" alt="">
+                            <img class="f-h-8" src="./Assets/img/sql.png" alt="">
                         </picture>
                         <p class="fw-medium ms-3 mb-0">SQL</p>
                     </div>
