--- a/index.html
+++ b/index.html
@@ -488,14 +488,17 @@
         <h6 class="display-2 tracking-wide mb-3" data-aos="slide-up">Want to work with me?</h6>
         <p class="text-muted lead tracking-wide mb-5" data-aos="reveal-left" data-aos-delay="500">Get the ball rolling
         </p>
-        <a href="#" class="text-warning display-6 font-serif tracking-wide text-decoration-none" data-aos="reveal-right"
+        <a href="mailto:walonsounderwood@gmail.com"
+            class="text-warning display-6 font-serif tracking-wide text-decoration-none" data-aos="reveal-right"
             data-aos-delay="1200">walonsounderwood@gmail.com</a>
 
         <ul class="list-unstyled d-flex mt-5 mb-4" data-aos="fade-up">
-            <li class="me-7"><a class="text-body text-decoration-none" href="#">Dribbble</a></li>
-            <li class="me-7"><a class="text-body text-decoration-none" href="#">Behance</a></li>
-            <li class="me-7"><a class="text-body text-decoration-none" href="#">LinkedIn</a></li>
-            <li class="me-7"><a class="text-body text-decoration-none" href="#">Instagram</a></li>
+            <li class="me-7"><a class="text-body text-decoration-none" href="https://github.com/Wau00">GitHub</a></li>
+            <li class="me-7"><a class="text-body text-decoration-none" href="tel:469-662-2739">Phone</a></li>
+            <li class="me-7"><a class="text-body text-decoration-none"
+                    href="https://www.linkedin.com/in/walter-alonso-underwood-291524234/">LinkedIn</a></li>
+            <li class="me-7"><a class="text-body text-decoration-none"
+                    href="https://www.instagram.com/underwooh/">Instagram</a></li>
         </ul>
 
         <p class="text-muted" data-aos="fade-up">All rights reserved. © Walter Underwood 2022. Template made with ❤️️ by
