Fixing source issues

--- a/index.html
+++ b/index.html
@@ -12,14 +12,6 @@
     <meta name="author" content="">
     <meta name="keywords" content="">
 
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon/favicon-16x16.png">
-    <link rel="mask-icon" href="./assets/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-
     <!-- Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,10 +20,10 @@
         rel="stylesheet">
 
     <!-- Vendor CSS -->
-    <link rel="stylesheet" href="./assets/css/libs.bundle.css" />
+    <link rel="stylesheet" href="./Assets/css/libs.bundle.css" />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="./assets/css/theme.bundle.css" />
+    <link rel="stylesheet" href="./Assets/css/theme.bundle.css" />
 
     <!-- Fix for custom scrollbar if JS is disabled-->
     <noscript>
@@ -318,7 +310,7 @@
             </div>
             <div class="portfolio-listing">
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio1.1.png" data-portfolio-title="Night Party"
+                    data-portfolio-img="./Assets/img/portfolio1.1.png" data-portfolio-title="Investment Tracker"
                     data-portfolio-description="Poster illustration created for a club&#x27;s annual summer party. Also created stickers, logos and various website elements."
                     data-portfolio-client="ACME Design Limited" data-portfolio-date=""
                     data-portfolio-category="Illustration">
@@ -327,7 +319,7 @@
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-2.1.png" data-portfolio-title="Skull &amp; Cat"
+                    data-portfolio-img="./Assets/img/portfolio-2.1.png" data-portfolio-title="eCommerce Back-End"
                     data-portfolio-description="Custom logo created for a local tatoo artist. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur magna nunc, ut egestas sem egestas non."
                     data-portfolio-client="Super 8 Design" data-portfolio-date=""
                     data-portfolio-category="Logo &amp; Branding">
@@ -336,7 +328,7 @@
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-3.1.png" data-portfolio-title="Warrior Skull"
+                    data-portfolio-img="./Assets/img/portfolio-3.1.png" data-portfolio-title="Social Burger"
                     data-portfolio-description="Nulla nec elit eu neque faucibus molestie sed et nulla. Aliquam placerat felis ipsum, non pellentesque tortor ultrices eget. Suspendisse ornare bibendum orci, sit amet aliquet erat faucibus et."
                     data-portfolio-client="Waterfall Theatre" data-portfolio-date=""
                     data-portfolio-category="Poster Design">
@@ -345,7 +337,7 @@
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-4.1.png" data-portfolio-title="Halloween"
+                    data-portfolio-img="./Assets/img/portfolio-4.1.png" data-portfolio-title="Notes Taker"
                     data-portfolio-description="Donec congue rutrum felis quis vestibulum. Vestibulum dictum libero eu sapien porttitor ultricies. Proin non dolor et nulla blandit vestibulum sed ut purus."
                     data-portfolio-client="Tesco" data-portfolio-date="" data-portfolio-category="Advert Design">
                     <picture class="d-block" data-aos="reveal-left">
@@ -353,7 +345,7 @@
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
-                    data-portfolio-img="./Assets/img/portfolio-5.1.png" data-portfolio-title="Inca Skull"
+                    data-portfolio-img="./Assets/img/portfolio-5.1.png" data-portfolio-title="Tech Blog"
                     data-portfolio-description="Phasellus consectetur orci ut ante gravida tempor. Praesent volutpat tincidunt enim sed dictum. Curabitur neque urna, rhoncus id neque luctus, finibus ornare libero."
                     data-portfolio-client="Super 8 Design" data-portfolio-date=""
                     data-portfolio-category="Illustration">
