Adding info to projects cards

--- a/index.html
+++ b/index.html
@@ -201,52 +201,61 @@
             <div class="portfolio-listing">
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
                     data-portfolio-img="./Assets/img/portfolio1.1.png" data-portfolio-title="Investment Tracker"
-                    data-portfolio-description="Poster illustration created for a club&#x27;s annual summer party. Also created stickers, logos and various website elements."
+                    data-portfolio-description="This platform was created with the intention of making it easy for any user curious about the current stock market. The search bar function allows the user to add a stock they would like to track"
                     data-portfolio-client="ACME Design Limited" data-portfolio-date=""
-                    data-portfolio-category="Illustration">
+                    data-portfolio-category="HTML, CSS, JavaScript, Moment.js, JQuery, Bulma">
                     <picture class="d-block" data-aos="reveal-left">
                         <img class="img-fluid" src="./Assets/img/portfolio-1.jpg" alt="">
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
                     data-portfolio-img="./Assets/img/portfolio-2.1.png" data-portfolio-title="eCommerce Back-End"
-                    data-portfolio-description="Custom logo created for a local tatoo artist. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur magna nunc, ut egestas sem egestas non."
+                    data-portfolio-description="build the back end for an e-commerce site and store the products, categories and tags on sql databses. The routes build have the ability of create, read, update, and delete product information such as price, product names,and available stock."
                     data-portfolio-client="Super 8 Design" data-portfolio-date=""
-                    data-portfolio-category="Logo &amp; Branding">
+                    data-portfolio-category="Express.JS, Insomnia, JavaScript, Node.js, NPM, MySQL, Sequelize">
                     <picture class="d-block" data-aos="reveal-left">
                         <img class="img-fluid" src="./Assets/img/portfolio-2.jpg" alt="">
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
                     data-portfolio-img="./Assets/img/portfolio-3.1.png" data-portfolio-title="Social Burger"
-                    data-portfolio-description="Nulla nec elit eu neque faucibus molestie sed et nulla. Aliquam placerat felis ipsum, non pellentesque tortor ultrices eget. Suspendisse ornare bibendum orci, sit amet aliquet erat faucibus et."
-                    data-portfolio-client="Waterfall Theatre" data-portfolio-date=""
-                    data-portfolio-category="Poster Design">
+                    data-portfolio-description="Social Burger is a site in which users interact with each other by sharing their own customized burger. On social burger, our main goal is to connect with people around the globe with creativity and innovation."
+                    data-portfolio-client="Waterfall Theatre" data-portfolio-date="" data-portfolio-category="HTML,
+                    Handlebars,
+                    CSS,
+                    Bootstrap,
+                    AOS,
+                    JavaScript,
+                    Express.js,
+                    Node.js,
+                    SQL">
                     <picture class="d-block" data-aos="reveal-left">
                         <img class="img-fluid" src="./Assets/img/portfolio-3.jpg" alt="">
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
                     data-portfolio-img="./Assets/img/portfolio-4.1.png" data-portfolio-title="Notes Taker"
-                    data-portfolio-description="Donec congue rutrum felis quis vestibulum. Vestibulum dictum libero eu sapien porttitor ultricies. Proin non dolor et nulla blandit vestibulum sed ut purus."
-                    data-portfolio-client="Tesco" data-portfolio-date="" data-portfolio-category="Advert Design">
+                    data-portfolio-description="In this project, we build a Notes Taker. The app has the ability of create, save, and delete notes on the page just by clicking on the designated buttons."
+                    data-portfolio-client="Tesco" data-portfolio-date=""
+                    data-portfolio-category="HTML, CSS, Express.JS, JavaScript, Node.JS, NPM">
                     <picture class="d-block" data-aos="reveal-left">
                         <img class="img-fluid" src="./Assets/img/portfolio-4.jpg" alt="">
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
                     data-portfolio-img="./Assets/img/portfolio-5.1.png" data-portfolio-title="Tech Blog"
-                    data-portfolio-description="On this project, we build the back end and front end for an blog site when the user needs to login/signup in order to share any posts with the public. The routes have the ability of create, read, update, and delete posts information as well as comments."
-                    data-portfolio-client="Tech Blog" data-portfolio-date="" data-portfolio-category="Illustration">
+                    data-portfolio-description="On this project, I build the back end and front end for an blog site when the user needs to login/signup in order to share any posts with the public. The routes have the ability of create, read, update, and delete posts information as well as comments."
+                    data-portfolio-client="Tech Blog" data-portfolio-date=""
+                    data-portfolio-category="HTML, CSS, BootStrap, Express.JS, Insomnia, JavaScript, Node.js, NPM, MySQL, Sequelize">
                     <picture class="d-block" data-aos="reveal-left">
                         <img class="img-fluid" src="./Assets/img/portfolio-5.jpg" alt="">
                     </picture>
                 </div>
                 <div class="portfolio-item" data-bs-toggle="modal" data-bs-target="#portfolioModal"
                     data-portfolio-img="./Assets/img/portfolio-6.1.png" data-portfolio-title="Employee Tracker"
-                    data-portfolio-description="Vestibulum eget lectus odio. Curabitur semper, nisi nec gravida pellentesque, justo risus ultricies leo, sed semper eros nisi ut nisl. Ut nec mattis arcu. Donec eu lobortis leo."
+                    data-portfolio-description="we build a program that generates tables and store them on sql databses and deploys them on Terminal.The app has the ability of view, add, and update employees information such as salary, department and manager."
                     data-portfolio-client="Petrolhead Designs" data-portfolio-date=""
-                    data-portfolio-category="Illustration">
+                    data-portfolio-category="Inquirer, JavaScript, Node.JS, NPM, MySQL">
                     <picture class="d-block" data-aos="reveal-left">
                         <img class="img-fluid" src="./Assets/img/portfolio-6.jpg" alt="">
                     </picture>
@@ -265,7 +274,8 @@
             </div>
             <h3><a href="https://atmason90.github.io/laaw-investment-tracker/">Stocks Tracker</a> & <span><a
                         href="https://github.com/Wau00/laaw-investment-tracker-P01">Repo</a></span></h3>
-            <h3> <a href="https://social-burger.herokuapp.com/">Social Burger</a> & <span><a href="https://github.com/kh288/Social-Burger">Repo</a></span></h3>
+            <h3> <a href="https://social-burger.herokuapp.com/">Social Burger</a> & <span><a
+                        href="https://github.com/kh288/Social-Burger">Repo</a></span></h3>
             <h3> <a href="https://calm-hamlet-44414.herokuapp.com/">Tech Blog</a> & <span><a
                         href="https://github.com/Wau00/TechBlog-MVC-HW-14">Repo</a></span>
             </h3>
@@ -428,10 +438,6 @@
                                 <div class="intro">
                                     <h3 class="display-5 mb-3"></h3>
                                     <p class="text-muted"></p>
-                                </div>
-                                <div class="client my-4">
-                                    <p class="text-uppercase small fw-bolder mb-1">Website</p>
-                                    <p class="text-muted small"></p>
                                 </div>
                                 <div class="category">
                                     <p class="text-uppercase small fw-bolder mb-1">Technologies</p>
