--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="./Assets/css/theme.bundle.css" />
-
+    <link rel="stylesheet" href="./Assets/css/style.css" />
     <!-- Fix for custom scrollbar if JS is disabled-->
     <noscript>
         <style>
@@ -105,7 +105,9 @@
                 <p class="text-muted lead mb-5" data-aos="fade-left" data-aos-delay="250">Full Stack Developer
                     &<br />
                     STEM Undergraduate.</p>
-                <a href="#" class="btn btn-pseudo" data-aos="fade-up" data-aos-delay="600">Download My CV</a>
+                <a href="./Assets/img/Resume.png" download class="btn btn-pseudo" data-aos="fade-up"
+                    data-aos-delay="600">Download
+                    My CV</a>
             </div>
             <div class="col-12 col-md-6 position-relative mt-10 mt-md-5 mt-lg-0">
                 <picture class="position-relative z-index-20 d-block" data-aos="fade-left" data-aos-delay="600">
@@ -272,22 +274,36 @@
                         fill="currentColor" />
                 </svg>
             </div>
-            <h3><a href="https://atmason90.github.io/laaw-investment-tracker/">Stocks Tracker</a> & <span><a
-                        href="https://github.com/Wau00/laaw-investment-tracker-P01">Repo</a></span></h3>
-            <h3> <a href="https://social-burger.herokuapp.com/">Social Burger</a> & <span><a
-                        href="https://github.com/kh288/Social-Burger">Repo</a></span></h3>
-            <h3> <a href="https://calm-hamlet-44414.herokuapp.com/">Tech Blog</a> & <span><a
-                        href="https://github.com/Wau00/TechBlog-MVC-HW-14">Repo</a></span>
-            </h3>
-            <h3> <a
-                    href="https://user-images.githubusercontent.com/99919050/166874240-46403e79-efd9-4d8d-86af-f24d1a33951a.mp4">eCommerce</a>
-                & <span><a href="https://github.com/Wau00/ECommerce-BackEnd-ORM-HW-13">Repo</a></span></h3>
-            <h3> <a href="https://glacial-peak-13098.herokuapp.com/">Notes Taker</a> & <span><a
-                        href="https://github.com/Wau00/Note-Taker-ExpressJs-HW-11">Repo</a></span></h3>
-            <h3> <a
-                    href="https://user-images.githubusercontent.com/99919050/166415139-e6dfecc4-3c80-4c8a-9f52-283b2e132a75.mp4">Employee
-                    Tracker</a> & <span><a href="https://github.com/Wau00/Employee-Tracker-SQL-HW-12">Repo</a></span>
-            </h3>
+            <div class="repoContainer">
+                <h3><a class="repoSpan" href="https://atmason90.github.io/laaw-investment-tracker/"
+                        target="_blank">Stocks Tracker</a> &
+                    <span><a class="repoSpan" href="https://github.com/Wau00/laaw-investment-tracker-P01"
+                            target="_blank">Repo</a></span>
+                </h3>
+                <h3> <a class="repoSpan" href="https://social-burger.herokuapp.com/" target="_blank">Social Burger</a> &
+                    <span><a class="repoSpan" href="https://github.com/kh288/Social-Burger"
+                            target="_blank">Repo</a></span>
+                </h3>
+                <h3> <a class="repoSpan" href="https://calm-hamlet-44414.herokuapp.com/" target="_blank">Tech Blog</a> &
+                    <span><a class="repoSpan" href="https://github.com/Wau00/TechBlog-MVC-HW-14"
+                            target="_blank">Repo</a></span>
+                </h3>
+                <h3> <a class="repoSpan"
+                        href="https://user-images.githubusercontent.com/99919050/166874240-46403e79-efd9-4d8d-86af-f24d1a33951a.mp4"
+                        target="_blank">eCommerce</a>
+                    & <span><a class="repoSpan" href="https://github.com/Wau00/ECommerce-BackEnd-ORM-HW-13"
+                            target="_blank">Repo</a></span></h3>
+                <h3> <a class="repoSpan" href="https://glacial-peak-13098.herokuapp.com/" target="_blank">Notes
+                        Taker</a> & <span><a class="repoSpan" href="https://github.com/Wau00/Note-Taker-ExpressJs-HW-11"
+                            target="_blank">Repo</a></span>
+                </h3>
+                <h3> <a class="repoSpan"
+                        href="https://user-images.githubusercontent.com/99919050/166415139-e6dfecc4-3c80-4c8a-9f52-283b2e132a75.mp4"
+                        target="_blank">Employee
+                        Tracker</a> & <span><a class="repoSpan"
+                            href="https://github.com/Wau00/Employee-Tracker-SQL-HW-12" target="_blank">Repo</a></span>
+                </h3>
+            </div>
         </div>
         <div class="py-8 skills">
             <div class="mb-6 py-2" data-aos="reveal-right">
