--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <span><a class="repoSpan" href="https://github.com/kh288/Social-Burger"
                             target="_blank">Repo</a></span>
                 </h3>
-                <h3> <a class="repoSpan" href="https://calm-hamlet-44414.herokuapp.com/" target="_blank">Tech Blog</a> &
+                <h3> <a class="repoSpan" href="https://techblogwau.herokuapp.com/" target="_blank">Tech Blog</a> &
                     <span><a class="repoSpan" href="https://github.com/Wau00/TechBlog-MVC-HW-14"
                             target="_blank">Repo</a></span>
                 </h3>
